--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head> 
+        <style>
+            .large {
+                font-size: 100px;
+            }
+        </style>
+    </head>
+
     <body>
-        <h1>Hello huzz 😉😏</h1>
+        <h1 class="large">Hello huzz 😉😏</h1>
     </body>
 </html>
