--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
-    <head> 
+<html lang="en">
+    <head>
         <style>
             .large {
                 font-size: 100px;
+            }
+            .huzz {
+                margin: auto;
             }
         </style>
     </head>
 
     <body>
-        <h1 class="large">Hello huzz 😉😏</h1>
+        <h1 class="huzz large">Hello huzz 😉😏</h1>
     </body>
 </html>
