--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
                 font-size: 100px;
             }
             .huzz {
-                margin: auto;
+                text-align: auto;
             }
         </style>
     </head>
